# libwebrtc

./: .clang-format  .gitignore  BUILD.gn  CMakeLists.txt  LICENSE  NOTICE  README.md  build.sh  conanfile.py  format.sh  helper.h  update_e2ee.patch  version.hpp.in
.conan/test_package/: conanfile.py
.github/workflows/: webrtc-builds.yml
app/: Makefile
app/src/: main.cpp
include/: interop_api.h  interop_macros.h  libwebrtc.h  libwebrtc_capi.h  ref_counted_object_capi.h  rtc_audio_data.h  rtc_audio_device.h  rtc_audio_frame.h  rtc_audio_source.h  rtc_audio_track.h  rtc_base_list.h  rtc_config.h  rtc_data_channel.h  rtc_data_packet_cryptor.h  rtc_desktop_capturer.h  rtc_desktop_device.h  rtc_desktop_media_list.h  rtc_dtls_transport.h  rtc_dtmf_sender.h  rtc_dummy_audio_source.h  rtc_dummy_video_capturer.h  rtc_frame_cryptor.h  rtc_ice_candidate.h  rtc_ice_transport.h  rtc_logging.h  rtc_media_stream.h  rtc_media_stream_list.h  rtc_media_track.h  rtc_media_types.h  rtc_mediaconstraints.h  rtc_peerconnection.h  rtc_peerconnection_factory.h  rtc_peerconnection_factory_capi.h  rtc_priority.h  rtc_rtp_capabilities.h  rtc_rtp_capabilities_lists.h  rtc_rtp_parameters.h  rtc_rtp_receiver.h  rtc_rtp_sender.h  rtc_rtp_transceiver.h  (+11 more)
include/base/: atomicops.h  fixed_map.h  fixed_size_function.h  fixed_string.h  inlined_vector.h  portable.h
include/opencv2/: cvconfig.h  opencv_modules.hpp  videoio.hpp
include/opencv2/flann/: flann_base.hpp
patchs/: custom_audio_source.patch  custom_audio_source_m125.patch  custom_audio_source_m137.patch  custom_audio_source_m144.patch  fix_emplace.patch
src/: audio_device_dummy.cc  audio_device_dummy.h  helper.cc  libwebrtc.cc  libwebrtc_interop.cc  rtc_audio_data_impl.cc  rtc_audio_data_impl.h  rtc_audio_device_impl.cc  rtc_audio_device_impl.h  rtc_audio_frame_impl.cc  rtc_audio_frame_impl.h  rtc_audio_processing_impl.cc  rtc_audio_processing_impl.h  rtc_audio_source_impl.cc  rtc_audio_source_impl.h  rtc_audio_track_impl.cc  rtc_audio_track_impl.h  rtc_data_channel_impl.cc  rtc_data_channel_impl.h  rtc_data_packet_cryptor_impl.cc  rtc_data_packet_cryptor_impl.h  rtc_desktop_capturer.cc  rtc_desktop_capturer.h  rtc_desktop_capturer_impl.cc  rtc_desktop_capturer_impl.h  rtc_desktop_device_impl.cc  rtc_desktop_device_impl.h  rtc_desktop_media_list_impl.cc  rtc_desktop_media_list_impl.h  rtc_dtls_transport_impl.cc  rtc_dtls_transport_impl.h  rtc_dtmf_sender_impl.cc  rtc_dtmf_sender_impl.h  rtc_dummy_audio_source_impl.cc  rtc_dummy_audio_source_impl.h  rtc_dummy_video_capturer_impl.cc  rtc_dummy_video_capturer_impl.h  rtc_frame_cryptor_impl.cc  rtc_frame_cryptor_impl.h  rtc_frame_decryptor_impl.cc  (+50 more)
src/base/: portable.cc  string.cc
src/capi/: libwebrtc_capi.cc  ref_counted_object_capi.cc  rtc_peerconnection_factory_capi.cc
src/crypto/: crypto.cc  crypto.h  frame_cryptor_transformer.cc  frame_cryptor_transformer.h  gcm_frame_decryptor.cc  gcm_frame_decryptor.h  gcm_frame_encryptor.cc  gcm_frame_encryptor.h
src/internal/: audio_util.cc  audio_util.h  crypto.cc  crypto.h  custom_audio_state.cc  custom_audio_state.h  custom_audio_transport_impl.cc  custom_audio_transport_impl.h  custom_media_context.cc  custom_media_context.h  custom_webrtc_voice_engine.cc  custom_webrtc_voice_engine.h  desktop_capturer.cc  desktop_capturer.h  dummy_audio_capturer.cc  dummy_audio_capturer.h  dummy_capturer.cc  dummy_capturer.h  jpeg_util.cc  jpeg_util.h  local_audio_track.cc  local_audio_track.h  vcm_capturer.cc  vcm_capturer.h  video_capturer.cc  video_capturer.h
src/interop/: libwebrtc_interop.cc  ref_counted_object_interop.cc  rtc_audio_data_interop.cc  rtc_audio_device_interop.cc  rtc_audio_processing_interop.cc  rtc_audio_track_interop.cc  rtc_data_channel_interop.cc  rtc_desktop_capturer_interop.cc  rtc_desktop_device_interop.cc  rtc_desktop_media_list_interop.cc  rtc_dtls_transport_interop.cc  rtc_dtmf_sender_interop.cc  rtc_dummy_audio_source_interop.cc  rtc_dummy_video_capturer_interop.cc  rtc_frame_cryptor_interop.cc  rtc_ice_candidate_interop.cc  rtc_logging_interop.cc  rtc_media_stream_interop.cc  rtc_media_stream_list_interop.cc  rtc_media_track_interop.cc  rtc_mediaconstraints_interop.cc  rtc_peerconnection_factory_interop.cc  rtc_peerconnection_interop.cc  rtc_rtp_capabilities_interop.cc  rtc_rtp_parameters_interop.cc  rtc_rtp_receiver_interop.cc  rtc_rtp_sender_interop.cc  rtc_rtp_transceiver_interop.cc  rtc_sdp_parse_error_interop.cc  rtc_session_description_interop.cc  rtc_video_device_interop.cc  rtc_video_frame_interop.cc  rtc_video_renderer_interop.cc  rtc_video_track_interop.cc
src/win/: base_allocator.cc  base_allocator.h  codecutils.cc  codecutils.h  commontypes.h  d3d11_allocator.cc  d3d11_allocator.h  d3d11_manager.h  d3d_allocator.cc  d3d_allocator.h  d3dnativeframe.h  mediacapabilities.cc  mediacapabilities.h  mediautils.cc  mediautils.h  msdkcommon.h  msdkvideobase.cc  msdkvideobase.h  msdkvideodecoder.cc  msdkvideodecoder.h  msdkvideodecoderfactory.cc  msdkvideodecoderfactory.h  msdkvideoencoder.cc  msdkvideoencoder.h  msdkvideoencoderfactory.cc  msdkvideoencoderfactory.h  nativehandlebuffer.h  sysmem_allocator.cc  sysmem_allocator.h  videorendererinterface.h  wmf_h265_decoder.cc  wmf_h265_decoder.h  wmf_h265_encoder.cc  wmf_h265_encoder.h  wmf_h265_factory.cc  wmf_h265_factory.h
src/win/include/: mfxadapter.h  mfxastructures.h  mfxaudio++.h  mfxaudio.h  mfxbrc.h  mfxcamera.h  mfxcommon.h  mfxdefs.h  mfxdispatcherprefixedfunctions.h  mfxenc.h  mfxfei.h  mfxfeihevc.h  mfxjpeg.h  mfxla.h  mfxmvc.h  mfxpak.h  mfxplugin++.h  mfxplugin.h  mfxsc.h  mfxsession.h  mfxstructures.h  mfxvideo++.h  mfxvideo.h  mfxvp8.h  mfxvp9.h  mfxvstructures.h
src/win/lib/win32/: libmfx.lib  libmfx_vs2015.lib
src/win/lib/x64/: libmfx.lib  libmfx_vs2015.lib
swig/: Makefile  libwebrtc.i  rtc_test.py
test/: CMakeLists.txt  peerconnection.test.cc  tests.cc
